re.c: stop a wrong warning of "flags ignored" on Regexp.new(//)

[Bug #18669]